# profilescout

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  test-requirements.txt
docs/: README.md
profile_crawler/: profile_crawler.py
profilescout/: __main__.py  main.py
profilescout/classification/: classifier.py
profilescout/cli/: __init__.py
profilescout/common/: constants.py  exceptions.py  interfaces.py  structures.py  texthelpers.py  wrappers.py
profilescout/extraction/: htmlextract.py  ner.py
profilescout/link/: utils.py
profilescout/web/: crawl.py  manager.py  webdriver.py  webpage.py
src/profilepkit/: main.py
src/profilepkit/common/: constants.py  exceptions.py
src/profilepkit/link/: hop.py  utils.py
src/profilepkit/web/: crawl.py  manager.py  webdriver.py  webpage.py
src/profilescout/: main.py
src/profilescout/classification/: __init__.py  classifier.py
src/profilescout/common/: constants.py  exceptions.py
src/profilescout/extraction/: htmlextract.py
src/profilescout/link/: utils.py
src/profilescout/web/: crawl.py  manager.py  webpage.py
tests/: context.py  test_driver_install.py  test_extraction_ner.py  test_htmlextract.py  test_link_funcs.py  test_link_utils.py  text_common_texthelpers.py
