[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "profilescout"
dynamic = ["version"]
description = 'Profile Scout is a kit that uses crawling and machine learning to identify profile pages on any website, simplifying the process of extracting user profiles, gathering information, and performing targeted actions.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = [
  "profile_page",
  "profile",
  "detection",
  "data_collection",
  "scraping",
  "analysis",
  "data_extraction"]
authors = [
  { name = "TodorovicSrdjan", email = "tsrdjan@pm.me" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "bs4",
    "html2text",
    "numpy",
    "pillow",
    "phonenumbers",
    "selenium",
    "tensorflow",
    "tldextract",
]

[project.urls]
Documentation = "https://github.com/todorovicsrdjan/profilescout#readme"
Issues = "https://github.com/todorovicsrdjan/profilescout/issues"
Source = "https://github.com/todorovicsrdjan/profilescout"

[project.scripts]
profilescout = "profilescout.cli:cli"

[tool.hatch.build]
include = [
  "**/*.py"
]
exclude = [
  "tests/**",
  "**/*.h5"
]

[tool.hatch.version]
path = "profilescout/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243"
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:profilescout tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 140
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 140
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["profilescout"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["profilescout", "tests"]
branch = true
parallel = true
omit = [
  "profilescout/__about__.py",
]

[tool.coverage.paths]
profilescout = ["profilescout", "*/profilescout/profilescout"]
tests = ["tests", "*/profilescout/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
